# web-scraper

./: README.md  app_logging.py  pyproject.toml
app/: __init__.py  config.py  setting.py
app/api/: __init__.py  amazon.py  flipkart.py  temp.py
app/controller/: amazon.py  flipkart.py
app/models/: __init__.py
app/services/: mongodb.py
app/urls/: amazon_urls.py  flipkart_urls.py
